@@ -162,7 +162,7 @@
 	      <can_focus>True</can_focus>
 	      <columns>1</columns>
 	      <column_widths>80</column_widths>
-	      <selection_mode>GTK_SELECTION_MULTIPLE</selection_mode>
+	      <selection_mode>GTK_SELECTION_EXTENDED</selection_mode>
 	      <show_titles>False</show_titles>
 	      <shadow_type>GTK_SHADOW_IN</shadow_type>
 
@@ -289,7 +289,7 @@
 	      <can_focus>True</can_focus>
 	      <columns>1</columns>
 	      <column_widths>80</column_widths>
-	      <selection_mode>GTK_SELECTION_MULTIPLE</selection_mode>
+	      <selection_mode>GTK_SELECTION_EXTENDED</selection_mode>
 	      <show_titles>False</show_titles>
 	      <shadow_type>GTK_SHADOW_IN</shadow_type>
 
@@ -360,8 +360,7 @@
 
 	    <widget>
 	      <class>GtkText</class>
-	      <name>text1</name>
-	      <height>92</height>
+	      <name>plugin_info_text</name>
 	      <can_focus>True</can_focus>
 	      <editable>False</editable>
 	      <text></text>
