@@ -1,3 +1,8 @@
+2000-06-28  Chema Celorio  <chema@celorio.com>
+
+	* dialogs/dialog-plugins.c (gedit_plugin_manager_item_clicked): add the plugin description
+	in the plugin manager when the plugin name is clicked.
+
 2000-06-27  Chema Celorio  <chema@celorio.com>
 
 	* view.c (gedit_view_load_widgets): fix a ugly piece of code.
